--- a/resources/package.json
+++ b/resources/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.0.0-beta.2"
+    "parcel": "^2.0.0-beta.2",
+    "popmotion": "^9.3.1",
+    "socket.io-client": "^4.0.0"
   }
 }
