--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "unique-names-generator": "^4.4.0"
   }
 }
