--- a/resources/package.json
+++ b/resources/package.json
@@ -12,5 +12,8 @@
     "parcel": "^2.0.0-beta.2",
     "popmotion": "^9.3.1",
     "socket.io-client": "^4.0.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-beta.2"
   }
 }
